--- a/components/SearchBox/SearchBox.module.css
+++ b/components/SearchBox/SearchBox.module.css
@@ -164,27 +164,9 @@
     font-size: 1.3rem;
   }
 
+  /* Hide on-screen keyboard on mobile devices */
   .keyboard {
-    padding: 1.25rem;
-  }
-
-  .key {
-    min-width: 48px;
-    min-height: 48px;
-    padding: 1rem 0.75rem;
-    font-size: 1.1rem;
-  }
-
-  .backspaceKey {
-    min-width: 70px;
-  }
-
-  .spaceKey {
-    min-width: 180px;
-  }
-
-  .clearKey, .doneKey {
-    min-width: 90px;
+    display: none !important;
   }
 }
 
